Add Logos' projects

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<div class="container">
 
 		<section class="education">
-			<h2>Western Washington University, Class '13<br/>
+			<h2>Western Washington University, Class&nbsp;'13<br/>
 				B.S. Mathematics/Computer Science<br/>
 				Spanish Minor</h2>
 		</section>
@@ -44,12 +44,20 @@
 				</div>
 				<div class="grid-4">
 					<ul>
-						<li>Created marketing web content under tight deadlines</li>
+						<li>Created and maintained Logos' landing pages using HTML/CSS and JavaScript</li>
+						<li>Created and maintained Logos Blogs, including theme development and content management</li>
 						<li>Acted on assigned tickets in FogBugz</li>
 						<li>Mentored new team members</li>
 						<li>Maintained close contact with Development, Marketing, and Graphic Design teams</li>
 					</ul>
 				</div>
+			</div>
+			<div class="row">
+				<h2>Logos Projects</h2>
+				<ul>
+					<li><a href="https://blog.logos.com/">LogosTalk Blog</a><br> The previous code for the LogosTalk Blog had 1,000+ console errors and was using an outdated framework. I researched different methods of revamping existing blogs. I utilized Genesis Framework. In result, all console errors from previous code were eliminated and page laod speed increased by 200%.</li>
+					<li><a href="https://academic.logos.com/">Logos Acedemic Blog</a><br> In the redesign of the Academic Blog, I noticed the theme was similiar throughout many of Logos' blog. Instead of hand coding each theme, I coded one theme that could be customized throughout Logos's blogs. </li>
+				</ul>
 			</div>
 			<div class="row">
 				<div class="grid-2">
@@ -119,6 +127,7 @@
 						<li>Genesis Framework</li>
 						<li>WordPress</li>
 						<li>Git</li>
+						<li>Sublime</li>
 					</ul>
 				</div>
 
